@@ -121,25 +121,12 @@ class JRequestTest_DataSet {
 	);
 
 	static function initSuperGlobals() {
-		$_GET = array(
-			'tag' => 'from _GET'
-		);
-		$_COOKIE = array(
-			'tag' => 'from _COOKIE'
-		);
-		$_ENV = array(
-			'tag' => 'from _ENV'
-		);
-		$_FILES = array(
-			'tag' => 'from _FILES'
-		);
-		$_POST = array(
-			'tag' => 'from _POST'
-		);
-		$_SERVER = array(
-			'tag' => 'from _SERVER',
-			'REQUEST_METHOD' => 'POST'
-		);
+		$_GET = array('tag' => 'from _GET');
+		$_COOKIE = array('tag' => 'from _COOKIE');
+		$_ENV = array('tag' => 'from _ENV');
+		$_FILES = array('tag' => 'from _FILES');
+		$_POST = array('tag' => 'from _POST');
+		$_SERVER = array('tag' => 'from _SERVER','REQUEST_METHOD' => 'POST');
 		/**
 		 * Merge get and post into request.
 		 */
